--- a/src/vistas/ClientesForm.form
+++ b/src/vistas/ClientesForm.form
@@ -25,6 +25,9 @@
     </Container>
   </NonVisualComponents>
   <Properties>
+    <Property name="closable" type="boolean" value="true"/>
+    <Property name="iconifiable" type="boolean" value="true"/>
+    <Property name="maximizable" type="boolean" value="true"/>
     <Property name="title" type="java.lang.String" value="Modulo Clientes"/>
   </Properties>
   <SyntheticProperties>
